Replaced the previous `AddDbContext` line in the `Program.cs` file for the `UseInMemoryDatabase` context with the new `UseNpgsql` context. For now, named the connection string `TrappyKeepy` and put that into the `appsettings.json` file for the project. Also added the option to use snake case naming. I put the swagger stuff back in that I had removed before. Set the swagger page to be the landing page when the app starts and opens a browser page. While developing, also added some extra logging.

--- a/TrappyKeepy.Api/appsettings.json
+++ b/TrappyKeepy.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TrappyKeepy": "Host=localhost;Database=keepydb;Username=dbuser;Password=dbpass"
+  }
 }
