Added the port to the connection string. It was trying 5432 by default. My dev database port is 15432. Also found a bug in the 5.0.2 version of EFCore.NamingConventions. Changed to use 6.0.0-rc.1 which worked fine.

--- a/TrappyKeepy.Api/appsettings.json
+++ b/TrappyKeepy.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TrappyKeepy": "Host=localhost;Database=keepydb;Username=dbuser;Password=dbpass"
+    "TrappyKeepy": "Host=localhost;Database=keepydb;Port=15432;Username=dbuser;Password=dbpass"
   }
 }
