--- a/TrappyKeepy.Api/TrappyKeepy.Api.csproj
+++ b/TrappyKeepy.Api/TrappyKeepy.Api.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EFCore.NamingConventions" Version="5.0.2" />
+    <PackageReference Include="EFCore.NamingConventions" Version="6.0.0-rc.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
