--- a/flyway.conf
+++ b/flyway.conf
@@ -1,4 +1,4 @@
-flyway.url=${FLYWAY_URL}
+flyway.url=${DB_URL}
 flyway.user=${DB_USER}
 flyway.password=${DB_PASSWORD}
-flyway.locations=${FLYWAY_LOCATIONS}
+flyway.locations=${MIGRATIONS}
