Storing the database connection string in an env var now. Not using the secrets manager anymore. No longer adding the DbContext in `Program.cs` because I no longer need to access the database this way. I found that I only needed that when using a library that was performing LINQ to SQL on every database action, even when doing stuff like `FromSqlRaw`, it seems to mean "LINQ from raw SQL". So, to avoid using LINQ to SQL I am just removing all of that. Now using the package "Npgsql" for database connectivity from the application, and only using "Npgsql.EntityFrameworkCore.PostgreSQL" for scaffolding of the models from the database (Database First approach) which is only done from the `Makefile` and never from within the application. Added the first service, the `UserService.cs`, and added as a transient in the `Program.cs`.

--- a/TrappyKeepy.Service/TrappyKeepy.Service.csproj
+++ b/TrappyKeepy.Service/TrappyKeepy.Service.csproj
@@ -1,5 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\TrappyKeepy.Domain\TrappyKeepy.Domain.csproj" />
+    <ProjectReference Include="..\TrappyKeepy.Data\TrappyKeepy.Data.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
