--- a/TrappyKeepy.Api/TrappyKeepy.Api.csproj
+++ b/TrappyKeepy.Api/TrappyKeepy.Api.csproj
@@ -16,4 +16,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TrappyKeepy.Data\TrappyKeepy.Data.csproj" />
+    <ProjectReference Include="..\TrappyKeepy.Service\TrappyKeepy.Service.csproj" />
+  </ItemGroup>
+
 </Project>
