--- a/TrappyKeepy.Domain/TrappyKeepy.Domain.csproj
+++ b/TrappyKeepy.Domain/TrappyKeepy.Domain.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
+    <PackageReference Include="Npgsql" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
