--- a/TrappyKeepy.Api/Properties/launchSettings.json
+++ b/TrappyKeepy.Api/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "api/keepers",
+      "launchUrl": "api/",
       "applicationUrl": "https://localhost:7294;http://localhost:5243",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
