--- a/flyway.conf
+++ b/flyway.conf
@@ -1,4 +1,4 @@
-flyway.url=${DB_URL}
-flyway.user=${DB_USER}
-flyway.password=${DB_PASSWORD}
-flyway.locations=${MIGRATIONS}
+flyway.url=${TKDB_URL}
+flyway.user=${TKDB_USER}
+flyway.password=${TKDB_PASSWORD}
+flyway.locations=${TKDB_MIGRATIONS}
