Updated the README.md with two more required environment variables. Added an authentication method to the user controller, user service, and user repository. Added a user authentication function to the PostgreSQL V1 migration script. Modified the service response class to include a possible token. Added a JwtService class to create JSON web tokens that have encrypted payload properties, and added a couple of NuGet packages to support doing that quickly.

--- a/TrappyKeepy.Service/TrappyKeepy.Service.csproj
+++ b/TrappyKeepy.Service/TrappyKeepy.Service.csproj
@@ -11,4 +11,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="EasyEncrypt" Version="2.2.1" />
+    <PackageReference Include="SimpleJWT" Version="1.1.0" />
+  </ItemGroup>
+
 </Project>
