--- a/TrappyKeepy.Test/TrappyKeepy.Test.csproj
+++ b/TrappyKeepy.Test/TrappyKeepy.Test.csproj
@@ -9,9 +9,22 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="2.2.7" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.2.7" />
-    <PackageReference Include="coverlet.collector" Version="3.1.0" />
+    <PackageReference Include="moq" Version="4.16.1" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="coverlet.collector" Version="3.1.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TrappyKeepy.Api\TrappyKeepy.Api.csproj" />
+    <ProjectReference Include="..\TrappyKeepy.Service\TrappyKeepy.Service.csproj" />
+    <ProjectReference Include="..\TrappyKeepy.Domain\TrappyKeepy.Domain.csproj" />
   </ItemGroup>
 
 </Project>
