Replaced the "SimpleJWT" package with the "JWT" package. No more automatic claims being added to the JWT. Instead of encrypting each key's value individually, now I have it encrypt the entire serialized payload, and then set that as the value in a payload wrapper dictionary.

--- a/TrappyKeepy.Service/TrappyKeepy.Service.csproj
+++ b/TrappyKeepy.Service/TrappyKeepy.Service.csproj
@@ -13,7 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="EasyEncrypt" Version="2.2.1" />
-    <PackageReference Include="SimpleJWT" Version="1.1.0" />
+    <PackageReference Include="JWT" Version="8.6.0" />
   </ItemGroup>
 
 </Project>
