Trying some changes in the vagrant bootstrap script to separate users who are dbowner (flyway would use this to perform migrations and have complete control) compare to dbuser (the app would use this and not have access to do things like drop tables. Also updated from PostgreSQL 12 to 14 for the development database.

--- a/flyway.conf
+++ b/flyway.conf
@@ -1,4 +1,4 @@
 flyway.url=${TKDB_URL}
-flyway.user=${TKDB_USER}
+flyway.user=${TKDB_OWNER}
 flyway.password=${TKDB_PASSWORD}
 flyway.locations=${TKDB_MIGRATIONS}
