--- a/TrappyKeepy.Service/TrappyKeepy.Service.csproj
+++ b/TrappyKeepy.Service/TrappyKeepy.Service.csproj
@@ -12,8 +12,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EasyEncrypt" Version="2.2.1" />
-    <PackageReference Include="JWT" Version="8.6.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.14.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.14.1" />
   </ItemGroup>
 
 </Project>
