--- a/TrappyKeepy.Domain/TrappyKeepy.Domain.csproj
+++ b/TrappyKeepy.Domain/TrappyKeepy.Domain.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
     <PackageReference Include="Npgsql" Version="6.0.0" />
   </ItemGroup>
