--- a/TrappyKeepy.Domain/TrappyKeepy.Domain.csproj
+++ b/TrappyKeepy.Domain/TrappyKeepy.Domain.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
     <PackageReference Include="Npgsql" Version="6.0.0" />
   </ItemGroup>
