Added a publish recipe to the Makefile. It calls to a new Makefile that is in the API project directory and uses dotnet-warp to compile a single executable distribution file of the API application. I also added to each csproj file in each of the projects, so that when performing a dotnet clean it will remove the old directories instead of leaving behind lots of old build files.

--- a/TrappyKeepy.Service/TrappyKeepy.Service.csproj
+++ b/TrappyKeepy.Service/TrappyKeepy.Service.csproj
@@ -17,4 +17,9 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.14.1" />
   </ItemGroup>
 
+  <Target Name="PostClean" AfterTargets="Clean">
+      <RemoveDir Directories="$(BaseIntermediateOutputPath)" /><!-- obj -->
+      <RemoveDir Directories="$(BaseOutputPath)" /><!-- bin -->
+  </Target>
+
 </Project>
