--- a/TrappyKeepy.Test/TrappyKeepy.Test.csproj
+++ b/TrappyKeepy.Test/TrappyKeepy.Test.csproj
@@ -32,4 +32,9 @@
     <ProjectReference Include="..\TrappyKeepy.Domain\TrappyKeepy.Domain.csproj" />
   </ItemGroup>
 
+  <Target Name="PostClean" AfterTargets="Clean">
+      <RemoveDir Directories="$(BaseIntermediateOutputPath)" /><!-- obj -->
+      <RemoveDir Directories="$(BaseOutputPath)" /><!-- bin -->
+  </Target>
+
 </Project>
