--- a/TrappyKeepy.Api/TrappyKeepy.Api.csproj
+++ b/TrappyKeepy.Api/TrappyKeepy.Api.csproj
@@ -22,4 +22,9 @@
     <ProjectReference Include="..\TrappyKeepy.Service\TrappyKeepy.Service.csproj" />
   </ItemGroup>
 
+  <Target Name="PostClean" AfterTargets="Clean">
+      <RemoveDir Directories="$(BaseIntermediateOutputPath)" /><!-- obj -->
+      <RemoveDir Directories="$(BaseOutputPath)" /><!-- bin -->
+  </Target>
+
 </Project>
