--- a/TrappyKeepy.Data/TrappyKeepy.Data.csproj
+++ b/TrappyKeepy.Data/TrappyKeepy.Data.csproj
@@ -20,4 +20,9 @@
     <ProjectReference Include="..\TrappyKeepy.Domain\TrappyKeepy.Domain.csproj" />
   </ItemGroup>
 
+  <Target Name="PostClean" AfterTargets="Clean">
+      <RemoveDir Directories="$(BaseIntermediateOutputPath)" /><!-- obj -->
+      <RemoveDir Directories="$(BaseOutputPath)" /><!-- bin -->
+  </Target>
+
 </Project>
