--- a/TrappyKeepy.Domain/TrappyKeepy.Domain.csproj
+++ b/TrappyKeepy.Domain/TrappyKeepy.Domain.csproj
@@ -15,4 +15,9 @@
     <PackageReference Include="Npgsql" Version="6.0.0" />
   </ItemGroup>
 
+  <Target Name="PostClean" AfterTargets="Clean">
+      <RemoveDir Directories="$(BaseIntermediateOutputPath)" /><!-- obj -->
+      <RemoveDir Directories="$(BaseOutputPath)" /><!-- bin -->
+  </Target>
+
 </Project>
